salesforce/force-app/main/default/objects/Opportunity/fields/First_Touch_Channel__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Channel__c</fullName>
    <description>Channel that first acquired the customer.</description>
    <inlineHelpText>Channel that first acquired the customer.</inlineHelpText>
    <label>First Touch Channel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>