salesforce/force-app/main/default/objects/Opportunity/fields/GA4_Contact__c.field-meta.xml
<CustomField>
    <fullName>GA4_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The customer who placed this order.</description>
    <inlineHelpText>The customer who placed this order.</inlineHelpText>
    <label>GA4 Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GA4 Orders</relationshipLabel>
    <relationshipName>GA4_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>