salesforce/force-app/main/default/objects/Opportunity/fields/GA4_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>GA4_Item_Quantity__c</fullName>
    <description>Number of items in the order.</description>
    <inlineHelpText>Number of items in the order.</inlineHelpText>
    <label>GA4 Item Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>