salesforce/force-app/main/default/objects/Opportunity/fields/GA4_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>GA4_Transaction_Id__c</fullName>
    <description>GA4 transaction id (or event id when GA4 recorded none). Used for upserts.</description>
    <externalId>true</externalId>
    <inlineHelpText>GA4 transaction id (or event id when GA4 recorded none). Used for upserts.</inlineHelpText>
    <label>GA4 Transaction ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>