salesforce/force-app/main/default/objects/Opportunity/fields/Last_Touch_Channel__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Channel__c</fullName>
    <description>Channel of the session the order was placed in.</description>
    <inlineHelpText>Channel of the session the order was placed in.</inlineHelpText>
    <label>Last Touch Channel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>